@@ -4,6 +4,21 @@ filterreader=org.apache.tools.ant.types.AntFilterReader
 filterset=org.apache.tools.ant.types.FilterSet
 mapper=org.apache.tools.ant.types.Mapper
 redirector=org.apache.tools.ant.types.RedirectorElement
+patternset=org.apache.tools.ant.types.PatternSet
+regexp=org.apache.tools.ant.types.RegularExpression
+substitution=org.apache.tools.ant.types.Substitution
+xmlcatalog=org.apache.tools.ant.types.XMLCatalog
+extensionSet=org.apache.tools.ant.taskdefs.optional.extension.ExtensionSet
+extension=org.apache.tools.ant.taskdefs.optional.extension.ExtensionAdapter
+selector=org.apache.tools.ant.types.selectors.SelectSelector
+signedselector=org.apache.tools.ant.types.selectors.SignedSelector
+scriptfilter=org.apache.tools.ant.types.optional.ScriptFilter
+assertions=org.apache.tools.ant.types.Assertions
+concatfilter=org.apache.tools.ant.filters.ConcatFilter
+mavenrepository=org.apache.tools.ant.taskdefs.repository.MavenRepository
+scriptselector=org.apache.tools.ant.types.optional.ScriptSelector
+scriptmapper=org.apache.tools.ant.types.optional.ScriptMapper
+
 # different filename mappers
 identitymapper=org.apache.tools.ant.util.IdentityMapper
 flattenmapper=org.apache.tools.ant.util.FlatFileNameMapper
@@ -16,27 +31,15 @@ compositemapper=org.apache.tools.ant.util.CompositeMapper
 chainedmapper=org.apache.tools.ant.util.ChainedMapper
 filtermapper=org.apache.tools.ant.types.mappers.FilterMapper
 
-patternset=org.apache.tools.ant.types.PatternSet
-regexp=org.apache.tools.ant.types.RegularExpression
-substitution=org.apache.tools.ant.types.Substitution
-xmlcatalog=org.apache.tools.ant.types.XMLCatalog
-extensionSet=org.apache.tools.ant.taskdefs.optional.extension.ExtensionSet
-extension=org.apache.tools.ant.taskdefs.optional.extension.ExtensionAdapter
-selector=org.apache.tools.ant.types.selectors.SelectSelector
-signedselector=org.apache.tools.ant.types.selectors.SignedSelector
-scriptfilter=org.apache.tools.ant.types.optional.ScriptFilter
-assertions=org.apache.tools.ant.types.Assertions
-concatfilter=org.apache.tools.ant.filters.ConcatFilter
+#conditions:
 issigned=org.apache.tools.ant.taskdefs.condition.IsSigned
 isfileselected=org.apache.tools.ant.taskdefs.condition.IsFileSelected
 isreachable=org.apache.tools.ant.taskdefs.condition.IsReachable
-mavenrepository=org.apache.tools.ant.taskdefs.repository.MavenRepository
-scriptselector=org.apache.tools.ant.types.optional.ScriptSelector
 scriptcondition=org.apache.tools.ant.types.optional.ScriptCondition
 xor=org.apache.tools.ant.taskdefs.condition.Xor
 parsersupports=org.apache.tools.ant.taskdefs.condition.ParserSupports
-scriptmapper=org.apache.tools.ant.types.optional.ScriptMapper
 isfailure=org.apache.tools.ant.taskdefs.condition.IsFailure
+resourcesmatch=org.apache.tools.ant.taskdefs.condition.ResourcesMatch
 
 #ResourceCollections:
 dirset=org.apache.tools.ant.types.DirSet
