@@ -335,6 +335,8 @@ Other changes:
 
 * add textfile attribute to the filesmatch condition.
 
+* new resourcesmatch condition.
+
 Changes from Ant 1.6.4 to Ant 1.6.5
 ===================================
 
